--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,13 @@
             }
           },
           "options": {
-            "assets": ["src/assets"],
+            "assets": ["src/assets"
+          , {
+            "glob": "zoho-domain-verification.html",
+            "input": "src/assets/",
+            "output": "/"
+          }
+          ],
             "index": "src/index.html",
             "browser": "src/main.ts",
             "outputPath": "dist/demo",
